--- a/src/main.css
+++ b/src/main.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: montserrat;
 }
 
 :root {
@@ -16,8 +18,15 @@
     margin: 0 auto;
 }
 
+.greeting {
+    text-align: center;
+    margin-top: 5vh;
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
 .main-title {
     margin-top: 2rem;
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .navbar {
@@ -33,13 +42,34 @@
 .navbar-logo img {
     justify-self: start;
     margin-left: 30px;
-    margin-top: 3vh;
+    margin-top: 1vh;
     cursor: pointer;
     height: 45px;
     width: auto;
     border-radius: 10px;
     transition: all 0.7s;
     box-shadow: 0 0 10px #a06f2f;
+}
+
+.carrito{
+    font-size: 25px;
+    margin-right: 50px;
+    margin-top: 1vh;
+    cursor: pointer;
+    color: #a06f2f;
+}
+
+.cantidad-carrito {
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    font-size: 10px;
+    padding: 4px;
+    top: 37px;
+    right: 30px;
+    position: absolute;
+
+    margin-right: 35px;
 }
 
 .menu {
@@ -71,6 +101,8 @@
     flex-direction: column;
     border-radius: 1rem;
     overflow: hidden;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    text-transform: capitalize;
 }
 
 .producto > div {
@@ -95,6 +127,7 @@
     width: max-content;
     border-radius: .5rem;
     transition: .2s;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .producto .ver-mas:hover {
@@ -107,6 +140,7 @@
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 2rem;
+    text-transform: capitalize;
 }
 
 .producto-detalle img {
@@ -127,61 +161,4 @@
     font-size: 2rem;
     margin-top: 2rem;
     font-weight: 600;
-}
-
-.item-count {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    margin-top: 1rem;
-}
-
-.item-count button, .agregar-al-carrito, .enviar {
-    background-color: var(--clr-main);
-    border: 0;
-    width: 2rem;
-    height: 2rem;
-    color: white;
-    border-radius: .5rem;
-    cursor: pointer;
-    font-size: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    line-height: 1;
-    border: 2px solid var(--clr-main);
-    transition: .2s;
-}
-
-.item-count button:hover, .agregar-al-carrito:hover, .enviar:hover {
-    background-color: white;
-    color: black;
-}
-
-.agregar-al-carrito, .enviar {
-    width: auto;
-    height: auto;
-    margin-top: 1rem;
-    padding: 1rem;
-}
-
-.formulario {
-    display: flex;
-    flex-direction: column;
-    gap: .5rem;
-    align-items: flex-start;
-}
-
-.formulario input {
-    padding: .5rem;
-    width: 18rem;
-    border-radius: .5rem;
-    border: 2px solid black;
-}
-
-.formulario input:focus {
-    outline: 0;
-    border: 2px solid var(--clr-main);
-    outline: 2px solid var(--clr-main);
 }
