--- a/src/main.css
+++ b/src/main.css
@@ -18,12 +18,6 @@
     margin: 0 auto;
 }
 
-.greeting {
-    text-align: center;
-    margin-top: 5vh;
-    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
 .main-title {
     margin-top: 2rem;
     text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
@@ -49,6 +43,33 @@
     border-radius: 10px;
     transition: all 0.7s;
     box-shadow: 0 0 10px #a06f2f;
+}
+
+.banner {
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('/public/img/banner.jpg');
+}
+
+.banner-container {
+    text-align: center;
+    padding: 15% 0;
+}
+
+.banner h1 {
+    margin: 0;
+    color: white;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+    font-size: 62px;
+    font-weight: bold;
+}
+
+.banner p {
+    font-size: 30px;
+    color: white;
+    opacity: 0.7;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
 }
 
 .carrito{
@@ -83,10 +104,22 @@
     text-decoration: none;
     color: #a06f2f;
     font-size: 1.2rem;
+    position: relative;
+    overflow: hidden;
 }
 
-.menu-link:hover {
-    text-decoration: underline;
+.menu-link:after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0%;
+    border-bottom: 2px solid;
+    transition: all .5s ease-in-out;
+}
+
+.menu-link:hover:after {
+    width: 100%;
 }
 
 .productos {
@@ -94,7 +127,9 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 2rem;
     padding-block: 2rem;
+    
 }
+
 
 .producto {
     display: flex;
@@ -103,6 +138,11 @@
     overflow: hidden;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     text-transform: capitalize;
+    transition:  all 0.5s;
+}
+
+.producto:hover {
+    transform: scale(1.05);
 }
 
 .producto > div {
@@ -128,6 +168,7 @@
     border-radius: .5rem;
     transition: .2s;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    align-self: center;    
 }
 
 .producto .ver-mas:hover {
@@ -136,6 +177,7 @@
 }
 
 .producto-detalle {
+    height: 100vh;
     padding-block: 2rem;
     display: grid;
     grid-template-columns: 1fr 2fr;
@@ -145,14 +187,21 @@
 
 .producto-detalle img {
     width: 100%;
+    border-radius: 20px;
+    box-shadow: 10px 0 5px #424242;
+    margin-top: 15px;
+    align-self: center;
+    
 }
 
-.producto-detalle-info h3 {
+.producto-detalle--info {
     font-size: 2rem;
+    margin-left: 30px;
+    align-self: center;
 }
 
 .categoria {
-    font-size: .8rem;
+    font-size: 1.2rem;
     color: #424242;
     margin-top: 1rem;
 }
@@ -161,4 +210,77 @@
     font-size: 2rem;
     margin-top: 2rem;
     font-weight: 600;
+    margin-bottom: 30px;
 }
+
+footer {
+    margin-top: 50px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9));
+    color: #fff;
+    text-align: center;
+    text-shadow: 0 0 5px #000;
+    padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+
+footer .redes {
+    margin-top: 15px;
+    margin-bottom: 10px;
+}
+
+footer .redes Link {
+    text-decoration: none;
+    font-size: 30px;
+    letter-spacing: 10px;
+}
+
+.item__count--container{
+    width: 200px;
+}
+
+.item__count--counter--container{
+    display: flex;
+    width: 200px;
+    margin: 10px;
+    justify-content: space-between;
+}
+
+.item__count--button {
+    display: flex;
+    padding: 10px;
+    align-self: center;
+    box-shadow: 0 0 5px #a06f2f, 0 0 5px #a06f2f, 0 0 5px #a06f2f ;
+    transition: all .7;
+    border-radius: 10px;
+    border: none;
+    font-size: large;
+    transition: all .7s;
+    cursor: pointer;
+}
+
+.item__count--button:hover{
+    transform: scale(1.1);
+}
+
+.count {
+    align-self: center;
+}
+
+.add__to__cart {
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    margin-left: 10px;
+    margin-top: 15px;
+    box-shadow: 0 0 5px #a06f2f, 0 0 5px #a06f2f, 0 0 5px #a06f2f ;
+    font-size: 15px;
+    text-transform: uppercase;
+    border: none;
+    cursor: pointer;
+    transition: all 0.7s;
+}
+
+.add__to__cart:hover {
+    transform: scale(1.1);
+}
+
