--- a/src/main.css
+++ b/src/main.css
@@ -77,7 +77,6 @@
     margin-right: 50px;
     margin-top: 1vh;
     cursor: pointer;
-    color: #a06f2f;
 }
 
 .cantidad-carrito {
@@ -177,6 +176,7 @@
 }
 
 .producto-detalle {
+    width: 800px;
     height: 100vh;
     padding-block: 2rem;
     display: grid;
@@ -187,6 +187,8 @@
 
 .producto-detalle img {
     width: 100%;
+    height: auto;
+    object-fit: cover;
     border-radius: 20px;
     box-shadow: 10px 0 5px #424242;
     margin-top: 15px;
@@ -228,10 +230,11 @@ footer .redes {
     margin-bottom: 10px;
 }
 
-footer .redes Link {
+footer .redes a {
     text-decoration: none;
     font-size: 30px;
     letter-spacing: 10px;
+    color: #fff;
 }
 
 .item__count--container{
