--- a/src/main.css
+++ b/src/main.css
@@ -238,18 +238,20 @@ footer .redes a {
 }
 
 .item__count--container{
-    width: 200px;
+    width: 280px;
+    height: 100px;
 }
 
 .item__count--counter--container{
     display: flex;
-    width: 200px;
+    width: 280px;
     margin: 10px;
     justify-content: space-between;
 }
 
 .item__count--button {
     display: flex;
+    margin: 10px;
     padding: 10px;
     align-self: center;
     box-shadow: 0 0 5px #a06f2f, 0 0 5px #a06f2f, 0 0 5px #a06f2f ;
@@ -287,3 +289,44 @@ footer .redes a {
     transform: scale(1.1);
 }
 
+.modal-container {
+    text-align: center;
+}
+
+.modal-content {
+    display: flex;
+    justify-content: center;
+}
+
+.modal-content>img {
+    width: 200px;
+    height: 200px;
+    border-radius: 10px;
+    object-fit: cover;
+}
+
+.modal-content--count{
+    width: 100%;
+    display: inline-flex;
+    justify-content: center;
+    font-size: 20px;
+}
+
+.modal-content--count>p{
+    padding: 10px;
+}
+
+.modal-content--count button{
+    padding: 10px;
+}
+
+.shop-content {
+    height: 60vh;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 280px));
+    gap: 20px;
+    margin: auto;
+    margin-top: 20px;
+}
