--- a/src/main.css
+++ b/src/main.css
@@ -289,8 +289,25 @@ footer .redes a {
     transform: scale(1.1);
 }
 
+.modal-header-title {
+    margin-top: 20px;
+}
+
 .modal-container {
     text-align: center;
+}
+
+.modal-container> button{
+    outline: 0;
+    padding: 12px;
+    margin: 10px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 150px;
+    font-size: 15px;
+    border-radius: 10px;
 }
 
 .modal-content {
@@ -303,10 +320,14 @@ footer .redes a {
     height: 200px;
     border-radius: 10px;
     object-fit: cover;
+    box-shadow: 0 0 10px #a06f2f;
+    margin: 10px;
 }
 
 .modal-content--count{
     width: 100%;
+    margin: auto;
+    margin-top: 10px;
     display: inline-flex;
     justify-content: center;
     font-size: 20px;
@@ -317,7 +338,7 @@ footer .redes a {
 }
 
 .modal-content--count button{
-    padding: 10px;
+    padding: 12px;
 }
 
 .shop-content {
@@ -328,5 +349,4 @@ footer .redes a {
     grid-template-columns: repeat(auto-fit, minmax(280px, 280px));
     gap: 20px;
     margin: auto;
-    margin-top: 20px;
 }
